fixed button border and added credits

--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,15 @@ body{
 
 .foot{
   background-color: black;
-  color:white;
+  color: white;
   width:auto;
   height: 350px;
   position: relative;
   text-align: center;
   font-family: "Nunito", "lora";
+}
+
+.credits{
+  position: relative;
+  top: 130px;
 }
