change font and adjust scaling for mobile

--- a/css/class.css
+++ b/css/class.css
@@ -21,3 +21,9 @@
   font-variation-settings:
     "wdth" 100;
 }
+
+.fuzzy-bubbles {
+  font-family: "Fuzzy Bubbles", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
