selena's suggestions implemented

--- a/css/style.css
+++ b/css/style.css
@@ -96,12 +96,13 @@
   top: 50%;
   transform: translateY(-50%) scale(0.95);
   z-index: 1;
+  text-align: center;
 }
 .faq-item.expanded .faq-answer {
   opacity: 1;
   pointer-events: auto;
   transform: translateX(62%) translateY(-50%) scale(1);
-  }
+}
 
 /* right gear animation (desktop) */
 .faq-item.right.expanded .faq-gear-container .faq-gear-img {
@@ -133,7 +134,7 @@ html {
 }
 
 .head{
-  color:#ffffff;
+  background-color: white;
    width:auto;
    height: 100px;
    list-style: none;
@@ -186,7 +187,6 @@ body{
     height: auto;
     gap: 0.5rem;
     padding: 8px 0;
-    color: black;
   }
   .logo img {
     height: 40px;
@@ -208,7 +208,11 @@ body{
   .foot {
     padding-left: 4px !important;
     padding-right: 4px !important;
-    height: auto;
+    min-height: 320px;
+    height: auto !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
   .credits {
     top: 40px;
@@ -266,6 +270,16 @@ body{
     min-width: 200px;
     max-width: 220px;
     font-size: 0.875rem;
+  }
+  .faq-item.expanded .faq-answer {
+  transform: translateX(45%) translateY(-50%) scale(1);
+  }
+  .faq-item.right.expanded .faq-answer {
+  transform: translateX(-45%) translateY(-50%) scale(1);
+  }
+  .faq-grid > .grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
   }
 }
 
