--- a/hammerhacks-site-2025/src/app/globals.css
+++ b/hammerhacks-site-2025/src/app/globals.css
@@ -8,8 +8,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 
@@ -17,7 +15,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: "Nunito";
 }
 
 .faq-item {
@@ -73,4 +70,26 @@ body {
   transform: translateX(-62%) translateY(0%) scale(1);
   left: auto;
   right: 0;
+}
+
+
+.team-member-img {
+  width: 5rem;
+  height: 5rem;
+  transition: border-color 0.2s, transform 0.3s;
+  border-radius: 9999px;
+  object-fit: cover;
+  border-width: 4px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  cursor: pointer;
+  border-color: #fff !important;
+  display: block;
+}
+.team-member-img:hover {
+  border-color: #f4802e !important;
+  transform: scale(1.2);
+}
+#team-section {
+  padding-left: 4px;
+  padding-right: 4px;
 }
